--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,9 @@ p {
     background-color: #ff9800;
     transform: scale(1.1);
 }
+/* Background Image*/
+.custom-background {
+    background-image: url('LAND.jpg');
+    background-size: cover;
+    background-position: center;
+}
