--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     color: #333;
     background-image: url('location.jpg'); /* Replace with your image file name */
     background-size: cover; /* Scales image to cover the viewport */
-    background-position: center; /* Centers the image */
+    background-position: center-bottom; /* Centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
 }
 
